# playground--

./: README.md
bind/: CMakeLists.txt  Caller.hpp  Function.hpp  MemberFunc.hpp  Storage.hpp  TypeList.hpp  TypeTraits.hpp  main.cpp  ut.h
bind/pp/: PP.hpp  pp_count_args.hpp  pp_for_each.hpp  pp_paste.hpp
bind/pp/details/: pp_for_each.hpp
constexpr_map/: CMakeLists.txt  details.hpp  main.cpp  map.hpp  set.hpp
delta_ptr/: CMakeLists.txt  delta_ptr.hpp  main.cpp
function_view/: CMakeLists.txt
function_view/include/: function_view.hpp
function_view/tests/: function_view-tests.cpp
lazy/: CMakeLists.txt  main.cpp
lighter_any/: CMakeLists.txt  lighter_any.hpp  main.cpp
polymorphic_wrapper/: CMakeLists.txt
polymorphic_wrapper/include/: polymorphic_wrapper.hpp
polymorphic_wrapper/tests/: polymorphic_wrapper-tests.cpp
struct_utils/: CMakeLists.txt
struct_utils/include/struct_utils/: as_tuple.hpp  for_each.hpp  stream_operator.hpp  struct_utils.hpp  traits.hpp
struct_utils/tests/: struct_utils-tests.cpp
